<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.apps.igmwork.LoginActivity">

    <include
        layout="@layout/view_toolbar_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/thumbColor"
            android:orientation="vertical"></LinearLayout>

        <com.gc.materialdesign.views.ProgressBarIndeterminate
            android:id="@+id/progressBarLoadingCustom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLoadingBar"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">
                <AutoCompleteTextView
                    android:id="@+id/txtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:hint="會員帳號(電話)"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:numeric="integer"
                    android:maxLength="10"
                    android:maxLines="1" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnChecked"
                    style="@style/ButtonCircle"
                    android:layout_gravity="right|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_checkedAccount"
                    android:textStyle="bold" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="登入密碼"
                android:visibility="gone">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/btnSign"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="確認密碼"
                android:visibility="gone">

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/btnSign"
                    android:imeActionLabel="@string/action_sign_confirmpassword"
                    android:imeOptions="actionNext"
                    android:inputType="phone"

                    android:maxLines="1"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="名字">

                <EditText
                    android:id="@+id/txtNickName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/btnSign"
                    android:imeActionLabel="@string/action_sign_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="信箱">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/btnSign"
                    android:imeActionLabel="@string/action_sign_email"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sex_rg"
                android:orientation="horizontal"
                android:checkedButton="@+id/male_rb">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="男"
                    android:id="@+id/male_rb"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女"
                    android:id="@+id/famale_rb"/>
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </FrameLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/ButtonCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/action_login"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btnSign"
                style="@style/ButtonCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>



</LinearLayout>