<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:gravity="center_horizontal"
android:orientation="vertical"
tools:context="com.apps.igmwork.LoginActivity">

<include
    layout="@layout/view_toolbar_simple"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/thumbColor"
        android:orientation="vertical"></LinearLayout>

    <com.gc.materialdesign.views.ProgressBarIndeterminate
        android:id="@+id/progressBarLoadingCustom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLoadingBar"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="會員帳號"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="登入密碼">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/btnLogin"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </FrameLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblForgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:onClick="onClick"
                android:text="@string/action_forget_password"
                android:textSize="18sp"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/action_register"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnForgetPwd"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_forget_password"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>



</LinearLayout>
